<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#58727C"
    tools:context=".userdash">

    <Button
        android:id="@+id/logout"
        android:layout_width="147dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:background="#E33434"
        android:text="@string/Logout"
        android:textColor="#FFFEFE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mybk" />

    <Button
        android:id="@+id/bkme"
        android:layout_width="147dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:background="#2196F3"
        android:text="@string/booking"
        android:textColor="#FFFEFE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/mybk"
        android:layout_width="147dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:background="#DA5A32"
        android:text="@string/mybook"
        android:textColor="#FFFEFE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bkme" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="205dp"
        android:layout_height="186dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/friz" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/username"
        android:textColorHint="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>