<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#58727C"
    tools:context=".Register"

    >

    <EditText
        android:id="@+id/cregpw"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cregpw"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regpw" />

    <EditText
        android:id="@+id/regmail"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/regEmail"
        android:inputType="textPersonName|textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <EditText
        android:id="@+id/regpw"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/regpw"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regphone" />

    <EditText
        android:id="@+id/regphone"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Phone"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regmail" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/regme"
        android:layout_width="173dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="#DA5A32"
        android:text="@string/regme"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cregpw" />

</androidx.constraintlayout.widget.ConstraintLayout>