<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardBackgroundColor="#FAFAFA">


    <LinearLayout
        android:id="@+id/listv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textserv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ServiceType"
                    android:textColor="#9C27B0"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textdate"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"

                    android:text="@string/datelist"
                    android:textColor="#020202"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/texth"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/timelist"
                    android:textColor="#000000"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>